# HelplyBackend

./: .env  Cargo.toml  README.md  docker-compose.yml  dockerfile
migrations/2022-11-05-135255_create_ticket/: down.sql  up.sql
migrations/2022-11-05-161523_create_notes/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/structs/: mod.rs  ticket.rs
